agregue paises con pesos y juegos mas votados

--- a/extract_random_user.ipynb
+++ b/extract_random_user.ipynb
@@ -2,63 +2,352 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
-    "import bs4 as bs\n"
+    "from bs4 import BeautifulSoup as bs\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# List of countries by region\n",
-    "european_countries = [\n",
-    "    \"Albania\", \"Andorra\", \"Armenia\", \"Austria\", \"Azerbaijan\", \"Belarus\", \n",
-    "    \"Belgium\", \"Bosnia and Herzegovina\", \"Bulgaria\", \"Croatia\", \"Cyprus\", \n",
-    "    \"Czech Republic\", \"Denmark\", \"Estonia\", \"Finland\", \"France\", \"Georgia\", \n",
-    "    \"Germany\", \"Greece\", \"Hungary\", \"Iceland\", \"Ireland\", \"Italy\", \"Kazakhstan\", \n",
-    "    \"Kosovo\", \"Latvia\", \"Liechtenstein\", \"Lithuania\", \"Luxembourg\", \"Malta\", \n",
-    "    \"Moldova\", \"Monaco\", \"Montenegro\", \"Netherlands\", \"North Macedonia\", \n",
-    "    \"Norway\", \"Poland\", \"Portugal\", \"Romania\", \"Russia\", \"San Marino\", \n",
-    "    \"Serbia\", \"Slovakia\", \"Slovenia\", \"Spain\", \"Sweden\", \"Switzerland\", \n",
-    "    \"Turkey\", \"Ukraine\", \"United Kingdom\", \"Vatican City\"\n",
-    "]\n",
-    "\n",
-    "american_countries = [\n",
-    "    \"Antigua and Barbuda\", \"Argentina\", \"Bahamas\", \"Barbados\", \"Belize\", \n",
-    "    \"Bolivia\", \"Brazil\", \"Canada\", \"Chile\", \"Colombia\", \"Costa Rica\", \"Cuba\", \n",
-    "    \"Dominica\", \"Dominican Republic\", \"Ecuador\", \"El Salvador\", \"Grenada\", \n",
-    "    \"Guatemala\", \"Guyana\", \"Haiti\", \"Honduras\", \"Jamaica\", \"Mexico\", \"Nicaragua\", \n",
-    "    \"Panama\", \"Paraguay\", \"Peru\", \"Saint Kitts and Nevis\",\n",
-    "    \"Saint Lucia\", \"Suriname\", \"Trinidad and Tobago\", \n",
-    "    \"United States\", \"Uruguay\", \"Venezuela\"\n",
-    "]\n",
-    "\n",
-    "asian_countries = [\n",
-    "    \"China\", \"India\", \"Indonesia\", \"Pakistan\", \"Bangladesh\", \"Japan\", \"Philippines\", \n",
-    "    \"Vietnam\", \"Turkey\", \"Iran\", \"Thailand\", \"Myanmar\", \"South Korea\", \"Iraq\", \n",
-    "    \"Afghanistan\", \"Saudi Arabia\", \"Uzbekistan\", \"Malaysia\", \"Yemen\", \"Nepal\", \n",
-    "    \"North Korea\", \"Sri Lanka\", \"Kazakhstan\", \"Syria\", \"Cambodia\", \"Jordan\", \n",
-    "    \"Azerbaijan\", \"United Arab Emirates\", \"Tajikistan\", \"Israel\", \"Laos\", \"Lebanon\", \n",
-    "    \"Kyrgyzstan\", \"Turkmenistan\", \"Singapore\", \"Oman\", \"Kuwait\", \n",
-    "    \"Georgia\", \"Mongolia\", \"Armenia\", \"Qatar\", \"Bahrain\", \"Timor-Leste\", \"Cyprus\", \n",
-    "    \"Bhutan\", \"Maldives\"\n",
-    "]\n",
-    "\n",
-    "# Combining all the countries into one list\n",
-    "all_countries = european_countries + american_countries + asian_countries\n",
-    "\n",
-    "# Replacing spaces with '%20' for countries with multi-word names\n",
-    "countries = [country.replace(\" \", \"%20\") for country in all_countries]\n",
-    "\n",
-    "\n"
+    "url = \"https://boardgamegeek.com/users?country=Vietnam&state=&city=\"\n",
+    "response = requests.get(url)\n",
+    "soup = bs(response.text, \"html.parser\")\n",
+    "country = soup.findAll(\"option\")\n",
+    "countries = [c.text for c in country]\n",
+    "countries = [country.replace(\" \", \"%20\") for country in countries]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#We assign weights to each country depending on the number of pages in boardgamegeek per user\n",
+    "\n",
+    "def get_weight(country):\n",
+    "    url = f\"https://boardgamegeek.com/users?country={country}&state=&city=\"\n",
+    "    # Fetch the page to get the number of pages for the country\n",
+    "    response = requests.get(url)\n",
+    "    soup = bs(response.text, 'html.parser')\n",
+    "    last_page_link = soup.find('a', title=\"last page\")\n",
+    "    if last_page_link:\n",
+    "            last_page_number = int(last_page_link.text.strip('[]'))\n",
+    "    else:\n",
+    "        last_page_number = 1\n",
+    "    \n",
+    "    return last_page_number\n",
+    "            \n",
+    "def createWeights(countries):\n",
+    "    weights = {}\n",
+    "    for country in countries:\n",
+    "        weight = get_weight(country)\n",
+    "        weights[country] = weight\n",
+    "    return weights\n",
+    "\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "weights = createWeights(countries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Aruba': 15,\n",
+       " 'Afghanistan': 31,\n",
+       " 'Angola': 14,\n",
+       " 'Anguilla': 10,\n",
+       " 'Åland%20Islands': 1,\n",
+       " 'Albania': 30,\n",
+       " 'Andorra': 22,\n",
+       " 'United%20Arab%20Emirates': 73,\n",
+       " 'Argentina': 524,\n",
+       " 'Armenia': 25,\n",
+       " 'American%20Samoa': 37,\n",
+       " 'Antarctica': 13,\n",
+       " 'French%20Southern%20Territories': 1,\n",
+       " 'Antigua%20and%20Barbuda': 9,\n",
+       " 'Australia': 2129,\n",
+       " 'Austria': 283,\n",
+       " 'Azerbaijan': 10,\n",
+       " 'Burundi': 1,\n",
+       " 'Belgium': 1005,\n",
+       " 'Benin': 1,\n",
+       " 'Bonaire,%20Sint%20Eustatius%20and%20Saba': 1,\n",
+       " 'Burkina%20Faso': 1,\n",
+       " 'Bangladesh': 30,\n",
+       " 'Bulgaria': 149,\n",
+       " 'Bahrain': 14,\n",
+       " 'Bahamas': 14,\n",
+       " 'Bosnia%20and%20Herzegovina': 24,\n",
+       " 'Saint%20Barthélemy': 1,\n",
+       " 'Belarus': 80,\n",
+       " 'Belize': 6,\n",
+       " 'Bermuda': 6,\n",
+       " 'Bolivia,%20Plurinational%20State%20of': 1,\n",
+       " 'Brazil': 2130,\n",
+       " 'Barbados': 6,\n",
+       " 'Brunei%20Darussalam': 1,\n",
+       " 'Bhutan': 1,\n",
+       " 'Bouvet%20Island': 1,\n",
+       " 'Botswana': 1,\n",
+       " 'Central%20African%20Republic': 1,\n",
+       " 'Canada': 4744,\n",
+       " 'Cocos%20(Keeling)%20Islands': 1,\n",
+       " 'Switzerland': 316,\n",
+       " 'Chile': 444,\n",
+       " 'China': 281,\n",
+       " \"Côte%20d'Ivoire\": 1,\n",
+       " 'Cameroon': 6,\n",
+       " 'Congo,%20The%20Democratic%20Republic%20of%20the': 1,\n",
+       " 'Congo': 1,\n",
+       " 'Cook%20Islands': 1,\n",
+       " 'Colombia': 245,\n",
+       " 'Comoros': 1,\n",
+       " 'Cabo%20Verde': 1,\n",
+       " 'Costa%20Rica': 70,\n",
+       " 'Cuba': 9,\n",
+       " 'Curaçao': 1,\n",
+       " 'Christmas%20Island': 1,\n",
+       " 'Cayman%20Islands': 1,\n",
+       " 'Cyprus': 32,\n",
+       " 'Czechia': 1,\n",
+       " 'Germany': 2784,\n",
+       " 'Djibouti': 1,\n",
+       " 'Dominica': 1,\n",
+       " 'Denmark': 613,\n",
+       " 'Dominican%20Republic': 16,\n",
+       " 'Algeria': 35,\n",
+       " 'Ecuador': 44,\n",
+       " 'Egypt': 56,\n",
+       " 'Eritrea': 1,\n",
+       " 'Western%20Sahara': 1,\n",
+       " 'Spain': 3112,\n",
+       " 'Estonia': 84,\n",
+       " 'Ethiopia': 6,\n",
+       " 'Finland': 454,\n",
+       " 'Fiji': 1,\n",
+       " 'Falkland%20Islands%20(Malvinas)': 1,\n",
+       " 'France': 2801,\n",
+       " 'Faroe%20Islands': 1,\n",
+       " 'Micronesia,%20Federated%20States%20of': 1,\n",
+       " 'Gabon': 1,\n",
+       " 'United%20Kingdom': 4994,\n",
+       " 'Georgia': 36,\n",
+       " 'Guernsey': 1,\n",
+       " 'Ghana': 10,\n",
+       " 'Gibraltar': 1,\n",
+       " 'Guinea': 1,\n",
+       " 'Guadeloupe': 1,\n",
+       " 'Gambia': 1,\n",
+       " 'Guinea-Bissau': 1,\n",
+       " 'Equatorial%20Guinea': 1,\n",
+       " 'Greece': 524,\n",
+       " 'Grenada': 1,\n",
+       " 'Greenland': 1,\n",
+       " 'Guatemala': 35,\n",
+       " 'French%20Guiana': 1,\n",
+       " 'Guam': 1,\n",
+       " 'Guyana': 1,\n",
+       " 'Hong%20Kong': 261,\n",
+       " 'Heard%20Island%20and%20McDonald%20Islands': 1,\n",
+       " 'Honduras': 10,\n",
+       " 'Croatia': 168,\n",
+       " 'Haiti': 1,\n",
+       " 'Hungary': 761,\n",
+       " 'Indonesia': 375,\n",
+       " 'Isle%20of%20Man': 6,\n",
+       " 'India': 486,\n",
+       " 'British%20Indian%20Ocean%20Territory': 1,\n",
+       " 'Ireland': 230,\n",
+       " 'Iran,%20Islamic%20Republic%20of': 1,\n",
+       " 'Iraq': 11,\n",
+       " 'Iceland': 65,\n",
+       " 'Israel': 171,\n",
+       " 'Italy': 1881,\n",
+       " 'Jamaica': 9,\n",
+       " 'Jersey': 1,\n",
+       " 'Jordan': 13,\n",
+       " 'Japan': 566,\n",
+       " 'Kazakhstan': 29,\n",
+       " 'Kenya': 16,\n",
+       " 'Kyrgyzstan': 1,\n",
+       " 'Cambodia': 10,\n",
+       " 'Kiribati': 1,\n",
+       " 'Saint%20Kitts%20and%20Nevis': 1,\n",
+       " 'Korea,%20Republic%20of': 1,\n",
+       " 'Kuwait': 17,\n",
+       " \"Lao%20People's%20Democratic%20Republic\": 1,\n",
+       " 'Lebanon': 19,\n",
+       " 'Liberia': 1,\n",
+       " 'Libya': 1,\n",
+       " 'Saint%20Lucia': 1,\n",
+       " 'Liechtenstein': 1,\n",
+       " 'Sri%20Lanka': 14,\n",
+       " 'Lesotho': 1,\n",
+       " 'Lithuania': 140,\n",
+       " 'Luxembourg': 32,\n",
+       " 'Latvia': 89,\n",
+       " 'Macao': 8,\n",
+       " 'Saint%20Martin%20(French%20part)': 1,\n",
+       " 'Morocco': 19,\n",
+       " 'Monaco': 1,\n",
+       " 'Moldova,%20Republic%20of': 1,\n",
+       " 'Madagascar': 1,\n",
+       " 'Maldives': 1,\n",
+       " 'Mexico': 959,\n",
+       " 'Marshall%20Islands': 1,\n",
+       " 'North%20Macedonia': 1,\n",
+       " 'Mali': 1,\n",
+       " 'Malta': 26,\n",
+       " 'Myanmar': 1,\n",
+       " 'Montenegro': 9,\n",
+       " 'Mongolia': 8,\n",
+       " 'Northern%20Mariana%20Islands': 1,\n",
+       " 'Mozambique': 1,\n",
+       " 'Mauritania': 1,\n",
+       " 'Montserrat': 1,\n",
+       " 'Martinique': 1,\n",
+       " 'Mauritius': 1,\n",
+       " 'Malawi': 1,\n",
+       " 'Malaysia': 230,\n",
+       " 'Mayotte': 1,\n",
+       " 'Namibia': 1,\n",
+       " 'New%20Caledonia': 1,\n",
+       " 'Niger': 1,\n",
+       " 'Norfolk%20Island': 1,\n",
+       " 'Nigeria': 30,\n",
+       " 'Nicaragua': 8,\n",
+       " 'Niue': 1,\n",
+       " 'Netherlands': 1390,\n",
+       " 'Norway': 332,\n",
+       " 'Nepal': 9,\n",
+       " 'Nauru': 1,\n",
+       " 'New%20Zealand': 421,\n",
+       " 'Oman': 7,\n",
+       " 'Pakistan': 61,\n",
+       " 'Panama': 18,\n",
+       " 'Pitcairn': 1,\n",
+       " 'Peru': 181,\n",
+       " 'Philippines': 447,\n",
+       " 'Palau': 1,\n",
+       " 'Papua%20New%20Guinea': 1,\n",
+       " 'Poland': 1598,\n",
+       " 'Puerto%20Rico': 37,\n",
+       " \"Korea,%20Democratic%20People's%20Republic%20of\": 1,\n",
+       " 'Portugal': 428,\n",
+       " 'Paraguay': 13,\n",
+       " 'Palestine,%20State%20of': 1,\n",
+       " 'French%20Polynesia': 1,\n",
+       " 'Qatar': 10,\n",
+       " 'Réunion': 8,\n",
+       " 'Romania': 342,\n",
+       " 'Russian%20Federation': 1,\n",
+       " 'Rwanda': 1,\n",
+       " 'Saudi%20Arabia': 49,\n",
+       " 'Sudan': 1,\n",
+       " 'Senegal': 1,\n",
+       " 'Singapore': 298,\n",
+       " 'South%20Georgia%20and%20the%20South%20Sandwich%20Islands': 1,\n",
+       " 'Saint%20Helena,%20Ascension%20and%20Tristan%20da%20Cunha': 1,\n",
+       " 'Svalbard%20and%20Jan%20Mayen': 1,\n",
+       " 'Solomon%20Islands': 1,\n",
+       " 'Sierra%20Leone': 1,\n",
+       " 'El%20Salvador': 12,\n",
+       " 'San%20Marino': 1,\n",
+       " 'Somalia': 1,\n",
+       " 'Saint%20Pierre%20and%20Miquelon': 1,\n",
+       " 'Serbia': 150,\n",
+       " 'South%20Sudan': 1,\n",
+       " 'Sao%20Tome%20and%20Principe': 1,\n",
+       " 'Suriname': 1,\n",
+       " 'Slovakia': 129,\n",
+       " 'Slovenia': 83,\n",
+       " 'Sweden': 970,\n",
+       " 'Eswatini': 1,\n",
+       " 'Sint%20Maarten%20(Dutch%20part)': 1,\n",
+       " 'Seychelles': 1,\n",
+       " 'Syrian%20Arab%20Republic': 1,\n",
+       " 'Turks%20and%20Caicos%20Islands': 1,\n",
+       " 'Chad': 1,\n",
+       " 'Togo': 1,\n",
+       " 'Thailand': 393,\n",
+       " 'Tajikistan': 1,\n",
+       " 'Tokelau': 1,\n",
+       " 'Turkmenistan': 1,\n",
+       " 'Timor-Leste': 1,\n",
+       " 'Tonga': 1,\n",
+       " 'Trinidad%20and%20Tobago': 8,\n",
+       " 'Tunisia': 13,\n",
+       " 'Türkiye': 1,\n",
+       " 'Tuvalu': 1,\n",
+       " 'Taiwan,%20Province%20of%20China': 1,\n",
+       " 'Tanzania,%20United%20Republic%20of': 1,\n",
+       " 'Uganda': 12,\n",
+       " 'Ukraine': 325,\n",
+       " 'United%20States%20Minor%20Outlying%20Islands': 1,\n",
+       " 'Uruguay': 79,\n",
+       " 'United%20States': 29275,\n",
+       " 'Uzbekistan': 8,\n",
+       " 'Holy%20See%20(Vatican%20City%20State)': 1,\n",
+       " 'Saint%20Vincent%20and%20the%20Grenadines': 1,\n",
+       " 'Venezuela,%20Bolivarian%20Republic%20of': 1,\n",
+       " 'Virgin%20Islands,%20British': 1,\n",
+       " 'Virgin%20Islands,%20U.S.': 1,\n",
+       " 'Viet%20Nam': 1,\n",
+       " 'Vanuatu': 1,\n",
+       " 'Wallis%20and%20Futuna': 1,\n",
+       " 'Samoa': 1,\n",
+       " 'Yemen': 1,\n",
+       " 'South%20Africa': 210,\n",
+       " 'Zambia': 1,\n",
+       " 'Zimbabwe': 9}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
