subir paises con peso, top 200 juegos por voto, en colab esta codigo de sacar amigos de primer y segundo orden

--- a/find_friends.ipynb
+++ b/find_friends.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,11 +37,225 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>average_rating</th>\n",
+       "      <th>Geek_rating</th>\n",
+       "      <th>rank</th>\n",
+       "      <th>num_voters</th>\n",
+       "      <th>type</th>\n",
+       "      <th>category</th>\n",
+       "      <th>playing_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>13</td>\n",
+       "      <td>CATAN</td>\n",
+       "      <td>7.09887</td>\n",
+       "      <td>6.92136</td>\n",
+       "      <td>555</td>\n",
+       "      <td>127892</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Economic</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>822</td>\n",
+       "      <td>Carcassonne</td>\n",
+       "      <td>7.41000</td>\n",
+       "      <td>7.29668</td>\n",
+       "      <td>224</td>\n",
+       "      <td>127130</td>\n",
+       "      <td>familygames</td>\n",
+       "      <td>Medieval</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30549</td>\n",
+       "      <td>Pandemic</td>\n",
+       "      <td>7.53562</td>\n",
+       "      <td>7.42958</td>\n",
+       "      <td>147</td>\n",
+       "      <td>125684</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Medical</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>68448</td>\n",
+       "      <td>7 Wonders</td>\n",
+       "      <td>7.68266</td>\n",
+       "      <td>7.57338</td>\n",
+       "      <td>91</td>\n",
+       "      <td>104710</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Ancient</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>167791</td>\n",
+       "      <td>Terraforming Mars</td>\n",
+       "      <td>8.35948</td>\n",
+       "      <td>8.21238</td>\n",
+       "      <td>7</td>\n",
+       "      <td>99143</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Economic</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>169426</td>\n",
+       "      <td>Roll Player</td>\n",
+       "      <td>7.44595</td>\n",
+       "      <td>7.23799</td>\n",
+       "      <td>263</td>\n",
+       "      <td>20556</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Dice</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Acquire</td>\n",
+       "      <td>7.34266</td>\n",
+       "      <td>7.12428</td>\n",
+       "      <td>343</td>\n",
+       "      <td>20518</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Economic</td>\n",
+       "      <td>90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>175914</td>\n",
+       "      <td>Food Chain Magnate</td>\n",
+       "      <td>8.06116</td>\n",
+       "      <td>7.80202</td>\n",
+       "      <td>39</td>\n",
+       "      <td>20456</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Economic</td>\n",
+       "      <td>240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>197</th>\n",
+       "      <td>216132</td>\n",
+       "      <td>Clans of Caledonia</td>\n",
+       "      <td>7.94401</td>\n",
+       "      <td>7.68279</td>\n",
+       "      <td>64</td>\n",
+       "      <td>20424</td>\n",
+       "      <td>strategygames</td>\n",
+       "      <td>Economic</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>198</th>\n",
+       "      <td>28023</td>\n",
+       "      <td>Jamaica</td>\n",
+       "      <td>7.06070</td>\n",
+       "      <td>6.88175</td>\n",
+       "      <td>606</td>\n",
+       "      <td>20423</td>\n",
+       "      <td>familygames</td>\n",
+       "      <td>Nautical</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>199 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id                name  average_rating  Geek_rating  rank  \\\n",
+       "0        13               CATAN         7.09887      6.92136   555   \n",
+       "1       822         Carcassonne         7.41000      7.29668   224   \n",
+       "2     30549            Pandemic         7.53562      7.42958   147   \n",
+       "3     68448           7 Wonders         7.68266      7.57338    91   \n",
+       "4    167791   Terraforming Mars         8.35948      8.21238     7   \n",
+       "..      ...                 ...             ...          ...   ...   \n",
+       "194  169426         Roll Player         7.44595      7.23799   263   \n",
+       "195       5             Acquire         7.34266      7.12428   343   \n",
+       "196  175914  Food Chain Magnate         8.06116      7.80202    39   \n",
+       "197  216132  Clans of Caledonia         7.94401      7.68279    64   \n",
+       "198   28023             Jamaica         7.06070      6.88175   606   \n",
+       "\n",
+       "     num_voters           type  category  playing_time  \n",
+       "0        127892  strategygames  Economic           120  \n",
+       "1        127130    familygames  Medieval            45  \n",
+       "2        125684  strategygames   Medical            45  \n",
+       "3        104710  strategygames   Ancient            30  \n",
+       "4         99143  strategygames  Economic           120  \n",
+       "..          ...            ...       ...           ...  \n",
+       "194       20556  strategygames      Dice            90  \n",
+       "195       20518  strategygames  Economic            90  \n",
+       "196       20456  strategygames  Economic           240  \n",
+       "197       20424  strategygames  Economic           120  \n",
+       "198       20423    familygames  Nautical            60  \n",
+       "\n",
+       "[199 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "games"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "players = pd.read_csv('players.csv')"
+    "players = pd.read_csv('players3.csv')"
    ]
   },
   {
